--- a/inst/rmarkdown/templates/default/resources/CUSTOMIZE_ME.css
+++ b/inst/rmarkdown/templates/default/resources/CUSTOMIZE_ME.css
@@ -89,10 +89,12 @@ th {
   color: white;
   font-weight: normal;
   padding: 20px 30px;
+  height:40px
   text-align: center;
 }
 td {
   background-color: rgb(238, 238, 238);
   color: rgb(111, 111, 111);
-  padding: 20px 30px;
+  padding: 3px 3px;
+  height:25px
 }
